--- a/03-frontend/angular-ecommerce/src/styles.css
+++ b/03-frontend/angular-ecommerce/src/styles.css
@@ -3,6 +3,7 @@
  * Common CSS
  * ----------------------------
  */
+ @import url('https://unpkg.com/bootstrap@4.6.0/dist/css/bootstrap.min.css');
 
  *{
     margin:0;
