--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -9,13 +9,22 @@
 
                 <!-- loop over collection of products -->
                 <div *ngFor="let tempProduct of products" class="col-md-3">
+
                     <div class="product-box">
                         <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
                         <h2>{{ tempProduct.name }}</h2>
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
                         <a href="#" class="primary-btn">Add to Cart</a>
                     </div>
+
                 </div>
+
+                <!-- if products empty then display a message -->
+
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+                    No products found.
+                </div>
+
             </div>
         </div>
 
