--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -47,8 +47,10 @@
                         <div class="col-md-3"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>CANADA</option>
+                                <select formControlName="country" (change)="getStates('shippingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{ country.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -73,11 +75,13 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-3"> <label>Province</label></div>
+                        <div class="col-md-3"> <label>State</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="province">
-                                    <option>ON</option>
+                                <select formControlName="state">
+                                    <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -112,8 +116,10 @@
                         <div class="col-md-3"> <label>Country</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="country">
-                                    <option>CANADA</option>
+                                <select formControlName="country" (change)="getStates('billingAddress')">
+                                    <option *ngFor="let country of countries" [ngValue]="country">
+                                        {{ country.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
@@ -138,11 +144,13 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-3"> <label>Province</label></div>
+                        <div class="col-md-3"> <label>State</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <select formControlName="province">
-                                    <option>ON</option>
+                                <select formControlName="state">
+                                    <option *ngFor="let state of billingAddressStates" [ngValue]="state">
+                                        {{ state.name }}
+                                    </option>
                                 </select>
                             </div>
                         </div>
