--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -170,19 +170,19 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-3"> <label>Postal Code</label></div>
+                        <div class="col-md-3"> <label>Zip Code</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <input formControlName="postalCode" type="text">
+                                <input formControlName="zipCode" type="text">
 
-                                <div *ngIf="shippingAddressPostalCode?.invalid && (shippingAddressPostalCode?.dirty || shippingAddressPostalCode?.touched)" class="alert alert-danger mt-1">
+                                <div *ngIf="shippingAddresszipCode?.invalid && (shippingAddresszipCode?.dirty || shippingAddresszipCode?.touched)" class="alert alert-danger mt-1">
                                     
-                                    <div *ngIf="shippingAddressPostalCode!.errors?.required || shippingAddressPostalCode!.errors?.notOnlyWhitespace">
-                                        Postal code is required
+                                    <div *ngIf="shippingAddresszipCode!.errors?.required || shippingAddresszipCode!.errors?.notOnlyWhitespace">
+                                        Zip code is required
                                     </div>
 
-                                    <div *ngIf="shippingAddressPostalCode!.errors?.minlength">
-                                        Postal code must be at least 5 characters long
+                                    <div *ngIf="shippingAddresszipCode!.errors?.minlength">
+                                        Zip code must be at least 5 characters long
                                     </div>
 
                                 </div>
@@ -296,19 +296,19 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-3"> <label>Postal Code</label></div>
+                        <div class="col-md-3"> <label>Zip Code</label></div>
                         <div class="col-md-9">
                             <div class="input-space">
-                                <input formControlName="postalCode" type="text">
+                                <input formControlName="zipCode" type="text">
 
-                                <div *ngIf="billingAddressPostalCode?.invalid && (billingAddressPostalCode?.dirty || billingAddressPostalCode?.touched)" class="alert alert-danger mt-1">
+                                <div *ngIf="billingAddresszipCode?.invalid && (billingAddresszipCode?.dirty || billingAddresszipCode?.touched)" class="alert alert-danger mt-1">
                                     
-                                    <div *ngIf="billingAddressPostalCode!.errors?.required || billingAddressPostalCode!.errors?.notOnlyWhitespace">
-                                        Postal code is required
+                                    <div *ngIf="billingAddresszipCode!.errors?.required || billingAddresszipCode!.errors?.notOnlyWhitespace">
+                                        Zip code is required
                                     </div>
 
-                                    <div *ngIf="billingAddressPostalCode!.errors?.minlength">
-                                        Postal code must be at least 5 characters long
+                                    <div *ngIf="billingAddresszipCode!.errors?.minlength">
+                                        Zip code must be at least 5 characters long
                                     </div>
 
                                 </div>
