--- a/03-frontend/angular-ecommerce/src/app/app.component.html
+++ b/03-frontend/angular-ecommerce/src/app/app.component.html
@@ -25,6 +25,8 @@
             <!-- new search component -->
             <app-search></app-search>
 
+            <app-login-status></app-login-status>
+
             <app-cart-status></app-cart-status>
 
             
