--- a/03-frontend/angular-ecommerce/src/styles.css
+++ b/03-frontend/angular-ecommerce/src/styles.css
@@ -217,12 +217,12 @@ section{
 }
 
 .au-input-xl{
-    min-width:935px
+    min-width:500px
 }
 
 input.au-input.au-input-xl{
     border-radius:40px!important;
-    margin-right:15px
+    margin-right:15px;
 }
 
 .au-input{
@@ -795,7 +795,8 @@ footer ul li{
 
 @media (max-width:1600px){
     .au-input-xl{
-        min-width:290px
+        min-width:136px;
+        width:136px
     }
 }
 @media (max-width:1315px) and (min-width:992px){
@@ -870,7 +871,7 @@ footer ul li{
         justify-content:center
     }
      .au-input-xl{
-        min-width:350px
+        min-width:100px
     }
       .logo{
         text-align:center
@@ -939,7 +940,7 @@ footer ul li{
 
 @media (max-width:767px){
       .au-input-xl{
-        min-width:150px
+        min-width:100px
     }
     .header-button-item{
         font-size:22px;
